# namelist-reader

./: CMakeLists.txt  README.md
include/: ast.h  ast.hpp  ast_adapted.h  config.h  namelist.h  namelist_def.h  namelist_def.hpp
src/: CMakeLists.txt  namelist.cpp
test/: CMakeLists.txt  NamelistSynthesisTest.cpp  ParserFortranIdentifierTest.cpp  ParserKeyArrayValueTest.cpp  ParserKeyIndexTest.cpp  ParserKeyValueTest.cpp  ParserNamelistTest.cpp  ParserSingleValueTest.cpp  ParserStringTest.cpp  ParserTest.cpp  test_runner.cpp
test/data/: CMakeLists.txt  data_generator.f90  nmlawkwardstrings.txt  nmlexchararray.txt  nmlexint.txt  nmlexlogical.txt  nmlexreal4.txt  nmlexreal8.txt
